feat: hide file names